[UI] Make reboot footer fit container to fix sizing on mobile.

--- a/www/css/fpp.css
+++ b/www/css/fpp.css
@@ -136,7 +136,7 @@
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
-	width: 600px;
+	width: 100%;
 }
 
 .ui-front
